descomplicando-kubernetes/day-12/ingress-giropops-senhas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "2" #limita a quantidade de requisições por segundo
    nginx.ingress.kubernetes.io/rewrite-target: / #redireciona a requisição para a raiz
    #nginx.ingress.kubernetes.io/auth-type: "basic" 
    #nginx.ingress.kubernetes.io/auth-secret: "giropops-senhas-users"
    #nginx.ingress.kubernetes.io/auth-realm: "Autenticação Necessária!"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
    #nginx.ingress.kubernetes.io/uipstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s-linuxtips.ccimoveisgarca.com.br
    secretName: k8s-linuxtips.ccimoveisgarca.com.br-tls
  rules:
  - host: k8s-linuxtips.ccimoveisgarca.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
