descomplicando-kubernetes/day-12/ingress-nginx-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / #quando bater no ingress, redireciona para o path / do container (nginx/aplicação)
    #nginx.ingress.kubernetes.io/auth-type: "basic" 
    #nginx.ingress.kubernetes.io/auth-secret: "giropops-senhas-users"
    #nginx.ingress.kubernetes.io/auth-realm: "Autenticação Necessária!"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
    #nginx.ingress.kubernetes.io/uipstream-hash-by: "$request_uri"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10" #em porcentagem
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s-linuxtips.ccimoveisgarca.com.br
    secretName: k8s-linuxtips.ccimoveisgarca.com.br-tls
  rules:
  - host: k8s-linuxtips.ccimoveisgarca.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
